--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <div class='main'>
-      <h1>
-        <span style="color:#0057e7">G</span>
-        <span style="color:#d62d20">O</span>
-        <span style="color:#ffa700">O</span>
-        <span style="color:#0057e7">G</span>
-        <span style="color:#d62d20">L</span>
-        <span style="color:#008744">E</span>
-         SEARCHME</h1>
+      <div class='header'>
+        <h1 style="color:#0057e7">G</h1>
+        <h1 style="color:#d62d20">O</h1>
+        <h1 style="color:#ffa700">O</h1>
+        <h1 style="color:#0057e7">G</h1>
+        <h1 style="color:#d62d20">L</h1>
+        <h1 style="color:#008744">E</h1>
+        <h1>SEARCHME</h1>
+      </div>
       <!-- SEARCH AREA -->
       <form class="search-form">
         <input class="input-form">
